--- a/app/src/main/res/layout/teachers_viewof_course.xml
+++ b/app/src/main/res/layout/teachers_viewof_course.xml
@@ -56,11 +56,12 @@
             android:layout_marginEnd="@dimen/activity_horizontal_margin">
             <ImageView
                 android:id="@+id/imgCourseImage"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_width="200dp"
+                android:layout_height="160dp"
                 android:src="@drawable/background"
                 android:scaleType="centerCrop"
-                tools:ignore="ContentDescription" />
+                tools:ignore="ContentDescription"
+                android:layout_gravity="center_horizontal"/>
             <TextView
                 android:id="@+id/courseName"
                 android:layout_width="match_parent"
@@ -180,11 +181,26 @@
                 android:textStyle="italic"
                 android:typeface="normal"/>
         </LinearLayout>
+        <Button
+            android:id="@+id/btnScheduleClass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/linearLayoutNextLecture"
+            android:layout_margin="10dp"
+            android:background="@drawable/btn_blue"
+            android:textColor="@color/colorBlack"
+            android:textSize="@dimen/text_margin"
+            android:text="Schedule Class"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
+            android:layout_centerHorizontal="true"/>
         <LinearLayout
             android:id="@+id/linearLayoutMeetLink"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/linearLayoutNextLecture"
+            android:layout_below="@id/btnScheduleClass"
             android:layout_marginTop="10dp"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
@@ -215,7 +231,7 @@
                 android:background="@drawable/text_view_login"/>
         </LinearLayout>
         <Button
-            android:id="@+id/btnUpdateClassInformation"
+            android:id="@+id/btnUpdateLink"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/linearLayoutMeetLink"
@@ -223,7 +239,7 @@
             android:background="@drawable/btn_blue"
             android:textColor="@color/colorBlack"
             android:textSize="@dimen/text_margin"
-            android:text="Update Class Information"
+            android:text="Update Link"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
             android:paddingBottom="10dp"
@@ -231,7 +247,7 @@
             android:layout_centerHorizontal="true"/>
         <TextView
             android:id="@+id/textCourseResources"
-            android:layout_below="@id/btnUpdateClassInformation"
+            android:layout_below="@id/btnUpdateLink"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
