--- a/app/src/main/res/layout/activity_setup_1.xml
+++ b/app/src/main/res/layout/activity_setup_1.xml
@@ -6,6 +6,19 @@
     android:background="@drawable/background"
     android:theme="@style/AppTheme">
 
+    <ProgressBar
+        android:id="@+id/loadingSetUp1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="64dp"
+        android:layout_marginTop="12dp"
+        android:visibility="gone"
+        android:layout_centerHorizontal="true"
+        android:indeterminateTint="@color/colorYellow"/>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
