--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -6,17 +6,21 @@
     android:background="@drawable/background"
     android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
-    <TextView
-        android:id="@+id/signupText"
+    <ProgressBar
+        android:id="@+id/loadingSignUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="64dp"
+        android:layout_marginTop="12dp"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="@string/sign_up_text"
-        android:textSize="32sp"
-        android:textColor="@color/colorWhite"/>
+        android:indeterminateTint="@color/colorYellow"/>
+
 
     <LinearLayout
         android:id="@+id/linearLayout2"
@@ -24,11 +28,12 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/text_margin"
         android:layout_marginRight="@dimen/text_margin"
+        android:layout_marginTop="64dp"
         android:orientation="vertical"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/signupText">
+        app:layout_constraintTop_toTopOf="parent">
 
         <EditText
             android:id="@+id/username"
