--- a/app/src/main/res/layout/activity_active_course_main.xml
+++ b/app/src/main/res/layout/activity_active_course_main.xml
@@ -3,10 +3,19 @@
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:background="@drawable/background_light"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    <ProgressBar
+        android:id="@+id/loadingActiveCourse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="12dp"
+        android:visibility="gone"
+        android:layout_centerHorizontal="true"
+        android:indeterminateTint="@color/colorPrimary"/>
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/loadingActiveCourse"
         android:id="@+id/student_registered_frame"
         android:layout_above="@+id/bottom_navigation"/>
 
