--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -23,13 +23,22 @@
         android:padding="10dp"/>
     -->
 
-
+    <ProgressBar
+        android:id="@+id/loadingAddCourse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="6dp"
+        android:visibility="gone"
+        android:layout_centerHorizontal="true"
+        android:indeterminateTint="@color/colorPrimary"/>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/btnNext"
-        android:layout_margin="@dimen/activity_vertical_margin">
+        android:layout_below="@id/loadingAddCourse"
+        android:layout_margin="@dimen/activity_horizontal_margin">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -46,8 +55,9 @@
                 android:layout_marginEnd="24dp">
 
                 <ImageView
-                    android:layout_width="match_parent"
+                    android:layout_width="200dp"
                     android:layout_height="160dp"
+                    android:layout_gravity="center_horizontal"
                     android:maxHeight="160dp"
                     android:src="@drawable/background"
                     android:id="@+id/imgAddCourseImage"
