--- a/app/src/main/res/layout/activity_add_course_contd.xml
+++ b/app/src/main/res/layout/activity_add_course_contd.xml
@@ -6,6 +6,16 @@
     android:background="@drawable/background_light"
     android:theme="@style/AppTheme">
 
+    <ProgressBar
+        android:id="@+id/loadingAddCourseContd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="6dp"
+        android:visibility="gone"
+        android:layout_centerHorizontal="true"
+        android:indeterminateTint="@color/colorPrimary"/>
+
     <!--
     <LinearLayout
         android:layout_width="match_parent"
@@ -51,6 +61,7 @@
         android:id="@+id/linearLayoutInsertButtons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/loadingAddCourseContd"
         android:orientation="horizontal"
         android:layout_marginTop="48dp"
         android:weightSum="90"
