--- a/app/src/main/res/layout/activity_setup_3.xml
+++ b/app/src/main/res/layout/activity_setup_3.xml
@@ -4,6 +4,18 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/background">
+    <ProgressBar
+        android:id="@+id/loadingSetUp3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="64dp"
+        android:layout_marginTop="12dp"
+        android:visibility="gone"
+        android:layout_centerHorizontal="true"
+        android:indeterminateTint="@color/colorYellow"/>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
