--- a/app/src/main/res/layout/activity_view_course.xml
+++ b/app/src/main/res/layout/activity_view_course.xml
@@ -5,10 +5,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/background_light">
 
-
+    <ProgressBar
+        android:id="@+id/loadingViewCourse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="6dp"
+        android:visibility="gone"
+        android:layout_centerHorizontal="true"
+        android:indeterminateTint="@color/colorPrimary"/>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/loadingViewCourse"
         android:scrollbars="vertical">
 
         <RelativeLayout
