--- a/app/src/main/res/layout/teachers_viewof_course.xml
+++ b/app/src/main/res/layout/teachers_viewof_course.xml
@@ -3,7 +3,8 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
     <ProgressBar
         android:id="@+id/loadingTeachersViewOfCourse"
         android:layout_width="wrap_content"
@@ -12,8 +13,7 @@
         android:layout_marginTop="6dp"
         android:visibility="gone"
         android:layout_centerHorizontal="true"
-        android:indeterminateTint="@color/colorPrimary"
-        xmlns:tools="http://schemas.android.com/tools"/>
+        android:indeterminateTint="@color/colorPrimary"/>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
