--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -323,7 +323,8 @@
         android:layout_alignParentBottom="true"
         android:progress="50"
         android:progressTint="@color/colorYellow"
-        android:progressBackgroundTint="@color/colorWhite"/>
+        android:progressBackgroundTint="@color/colorWhite"
+        android:id="@+id/add_course_progress"/>
 
     <Button
         android:id="@+id/btnNext"
