--- a/app/src/main/res/layout/course_card.xml
+++ b/app/src/main/res/layout/course_card.xml
@@ -26,7 +26,7 @@
                 android:id="@+id/courseImage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="fitCenter"
+                android:scaleType="centerCrop"
                 android:src="@color/colorPrimary"
                 tools:ignore="ContentDescription" />
 
