--- a/app/src/main/res/layout/teachers_viewof_course.xml
+++ b/app/src/main/res/layout/teachers_viewof_course.xml
@@ -130,20 +130,21 @@
                     android:text="0 % completed"
                     android:typeface="normal"
                     android:gravity="center_vertical" />
+
                 <ToggleButton
                     android:id="@+id/toggleRegistrationAcceptance"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textOff="@string/new_registrations_closed"
-                    android:textOn="@string/accepting_registrations_now"
                     android:layout_margin="@dimen/text_margin"
                     android:background="@drawable/btn_multi_select"
+                    android:checked="true"
                     android:elevation="100dp"
                     android:shadowColor="@color/colorPrimaryDark"
                     android:textColor="@color/colorBlack"
+                    android:textOff="@string/new_registrations_closed"
+                    android:textOn="@string/accepting_registrations_now"
                     android:textSize="@dimen/text_margin"
-                    android:textStyle="bold"
-                    android:checked="true"/>
+                    android:textStyle="bold" />
             </LinearLayout>
             <TextView
                 android:id="@+id/textClassInfo"
