--- a/app/src/main/res/layout/activity_explore_courses.xml
+++ b/app/src/main/res/layout/activity_explore_courses.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/background_light">
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/exploreList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
