--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,29 +31,36 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:scrollbars="vertical">
-                <TextView
-                    android:id="@+id/textYourCurrentCourses"
-                    android:layout_width="wrap_content"
+                <RelativeLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:gravity="center_vertical"
-                    android:text="@string/resume_learning"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="@dimen/text_margin"
-                    android:textStyle="bold"
-                    android:paddingVertical="5dp"
-                    android:paddingHorizontal="10dp"
-                    android:typeface="serif" />
+                    android:id="@+id/frameCurrentCourseListView"
+                    android:background="@color/colorBlack">
+                    <TextView
+                        android:id="@+id/textYourCurrentCourses"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:text="@string/resume_learning"
+                        android:textColor="@color/colorWhite"
+                        android:layout_marginTop="24dp"
+                        android:textSize="@dimen/text_margin"
+                        android:textStyle="bold"
+                        android:paddingVertical="5dp"
+                        android:paddingHorizontal="10dp"
+                        android:typeface="serif" />
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/currentCourseListView"
+                        android:scrollbars="horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="10dp"
+                        android:orientation="horizontal"
+                        android:layout_below="@id/textYourCurrentCourses"
+                        android:layout_margin="5dp"
+                        android:foregroundTint="@color/colorWhite"/>
+                </RelativeLayout>
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/currentCourseListView"
-                    android:scrollbars="horizontal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    android:orientation="horizontal"
-                    android:layout_below="@id/textYourCurrentCourses"
-                    android:layout_margin="5dp"/>
                 <TextView
                     android:id="@+id/textRecommendedCoursesList"
                     android:layout_width="wrap_content"
@@ -66,7 +73,7 @@
                     android:paddingVertical="5dp"
                     android:paddingHorizontal="10dp"
                     android:typeface="serif"
-                    android:layout_below="@id/currentCourseListView"
+                    android:layout_below="@id/frameCurrentCourseListView"
                     android:layout_marginTop="48dp"/>
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recommendedCourseListView"
