--- a/app/src/main/res/menu/three_dot_menu.xml
+++ b/app/src/main/res/menu/three_dot_menu.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:showIn="navigation_view">
     <item
         android:title="Refresh"
         android:id="@+id/refresh"
-        android:icon="@drawable/add_box_icon"/>
+        android:icon="@drawable/icon_refresh"
+        android:iconTint="@color/colorBlack"/>
     <item
-        android:title="SignOut"
+        android:title="Sign out"
         android:id="@+id/signOut"
-        android:icon="@drawable/add_box_icon"/>
+        android:icon="@drawable/icon_close"
+        android:iconTint="@color/colorBlack"/>
+    <item
+        android:title="Search"
+        app:showAsAction="always"
+        android:icon="@drawable/icon_search"
+        android:iconTint="@color/colorWhite"/>
+
 </menu>
