--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -134,7 +134,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:background="@drawable/background_light"
-        android:fitsSystemWindows="true"
+        android:fitsSystemWindows="false"
         android:layout_gravity="start"
         app:headerLayout="@layout/header_layout"
         app:itemIconTint="@color/colorPrimaryDark"
