--- a/app/src/main/res/layout/teachers_viewof_course.xml
+++ b/app/src/main/res/layout/teachers_viewof_course.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- This layout is pending improvements -->
+<!--
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,7 +21,7 @@
         android:background="@drawable/background_light">
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"> -->
             <!--
         <LinearLayout
             android:layout_width="match_parent"
@@ -57,7 +58,7 @@
                 android:focusable="true"
                 tools:ignore="ContentDescription" />
         </LinearLayout> -->
-
+<!--
             <LinearLayout
                 android:id="@+id/linearLayoutCourseInfo"
                 android:layout_width="match_parent"
@@ -302,4 +303,38 @@
                 android:drawablePadding="10dp"/>
         </RelativeLayout>
     </ScrollView>
+</RelativeLayout>
+-->
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:background="@drawable/background_light"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <ProgressBar
+        android:id="@+id/loadingTeachersViewCourse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="12dp"
+        android:visibility="gone"
+        android:layout_centerHorizontal="true"
+        android:indeterminateTint="@color/colorPrimary"/>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/loadingTeachersViewCourse"
+        android:id="@+id/course_teacher_frame"
+        android:layout_above="@+id/bottom_navigation_teacher"/>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation_teacher"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:menu="@menu/bottom_navigation_teacher_menu"
+        android:layout_alignParentBottom="true"
+        app:backgroundTint="@color/colorPrimary"
+        android:background="@drawable/bottom_app_bar"
+        app:elevation="20dp"
+        app:itemIconTint="@color/colorWhite"
+        app:itemTextColor="@color/colorWhite"/>
+
 </RelativeLayout>
