--- a/app/src/main/res/layout/activity_add_course_contd.xml
+++ b/app/src/main/res/layout/activity_add_course_contd.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/background_light"
     android:theme="@style/AppTheme">
 
@@ -59,8 +60,9 @@
 
     <LinearLayout
         android:id="@+id/linearLayoutInsertButtons"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_below="@id/loadingAddCourseContd"
         android:orientation="horizontal"
         android:layout_marginTop="48dp"
@@ -73,20 +75,24 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:id="@+id/add_documents_introductory"
-            android:layout_weight="30">
-            <com.google.android.material.button.MaterialButton
-                android:layout_width="108dp"
-                android:layout_height="108dp"
-                android:background="@drawable/icon_doc"
-                android:layout_margin="15dp"
-                android:textColor="@color/colorWhite"
-                />
+            android:layout_weight="30"
+            android:gravity="center"
+            android:layout_margin="@dimen/activity_horizontal_margin">
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/colorWhite"
+                android:elevation="30dp"
+                android:layout_margin="@dimen/activity_horizontal_margin"
+                android:src="@drawable/icon_doc"
+                android:tint="@color/colorBlack"
+                tools:ignore="ContentDescription"/>
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Add Document"
                 android:gravity="center"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/colorBlack"
                 android:textSize="@dimen/text_margin"/>
         </LinearLayout>
         <LinearLayout
@@ -94,19 +100,24 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:id="@+id/add_images_introductory"
-            android:layout_weight="30">
-            <com.google.android.material.button.MaterialButton
-                android:layout_width="108dp"
-                android:layout_height="108dp"
-                android:background="@drawable/icon_image"
-                android:layout_margin="15dp"
-                android:textColor="@color/colorWhite"/>
+            android:layout_weight="30"
+            android:gravity="center"
+            android:layout_margin="@dimen/activity_horizontal_margin">
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/colorWhite"
+                android:elevation="30dp"
+                android:layout_margin="@dimen/activity_horizontal_margin"
+                android:tint="@color/colorBlack"
+                android:src="@drawable/icon_image"
+                tools:ignore="ContentDescription" />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Add Image"
                 android:gravity="center"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/colorBlack"
                 android:textSize="@dimen/text_margin"/>
         </LinearLayout>
 
@@ -115,19 +126,24 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:id="@+id/add_video_introductory"
-            android:layout_weight="30">
-            <com.google.android.material.button.MaterialButton
-                android:layout_width="108dp"
-                android:layout_height="108dp"
-                android:background="@drawable/icon_video"
-                android:layout_margin="15dp"
-                android:textColor="@color/colorWhite"/>
+            android:layout_weight="30"
+            android:gravity="center"
+            android:layout_margin="@dimen/activity_horizontal_margin">
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/colorWhite"
+                android:elevation="20dp"
+                android:layout_margin="@dimen/activity_horizontal_margin"
+                android:tint="@color/colorBlack"
+                android:src="@drawable/icon_video"
+                tools:ignore="ContentDescription" />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Add Video"
                 android:gravity="center"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/colorBlack"
                 android:textSize="@dimen/text_margin"/>
         </LinearLayout>
 
@@ -143,9 +159,6 @@
         android:layout_above="@id/btnAddCourse"
         android:layout_margin="@dimen/activity_horizontal_margin"
         android:orientation="vertical"/>
-
-
-
     <Button
         android:theme="@style/AppTheme"
         android:id="@+id/btnAddCourse"
@@ -153,7 +166,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_margin="24dp"
-        android:background="@drawable/btn_rounded_rect"
+        android:background="@drawable/btn_blue"
         android:textColor="@color/colorBlack"
         android:textSize="@dimen/text_margin"
         android:text="Upload and Proceed"
