Added Explore Courses Functionality

--- a/app/src/main/res/layout/explore_course_recycler_card.xml
+++ b/app/src/main/res/layout/explore_course_recycler_card.xml
@@ -30,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#B211042E"
-            android:text="Adrian Gilatos Junior"
+            android:text="Upsilon"
             android:textSize="14sp"
             android:textStyle="italic"
             android:typeface="serif"
