--- a/app/src/main/res/layout/action_bar_active_course.xml
+++ b/app/src/main/res/layout/action_bar_active_course.xml
@@ -3,12 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/colorPrimary"
-    android:weightSum="100">
+    android:layout_height="?attr/actionBarSize"
+    android:background="@color/colorPrimary">
     <ImageButton
         android:id="@+id/imgBtnBackActiveCourse"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:src="@drawable/back_icon"
         android:backgroundTint="#0000"
@@ -16,9 +15,10 @@
         android:focusable="true"
         tools:ignore="ContentDescription"
         android:tint="@color/colorWhite"
-        android:layout_weight="45"/>
+        android:layout_weight="1"/>
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/textCourseNameActiveCourse"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:padding="5dp"
         android:textSize="20sp"
@@ -26,17 +26,7 @@
         android:textStyle="bold"
         android:text="@string/course_name"
         android:gravity="center"
-        android:layout_weight="10"
-        android:layout_gravity="center_vertical"/>
-    <ImageButton
-        android:id="@+id/imgBtnMenuActiveCourse"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/menu_button"
-        android:backgroundTint="#0000"
-        android:clickable="true"
-        android:focusable="true"
-        tools:ignore="ContentDescription"
-        android:tint="@color/colorWhite"
-        android:layout_weight="45"/>
+        android:layout_weight="7"
+        android:layout_gravity="center_vertical"
+        android:maxLines="1" />
 </LinearLayout>
