--- a/app/src/main/res/layout/custom_messages_layout.xml
+++ b/app/src/main/res/layout/custom_messages_layout.xml
@@ -19,7 +19,8 @@
         android:id="@+id/receiver_message"
         android:layout_alignParentTop="true"
         android:layout_marginTop="3dp"
-        android:layout_marginHorizontal="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="40dp"
         android:background="@drawable/receiver_message_layout_forum"
         android:paddingStart="20dp"
         android:paddingTop="5dp"
@@ -98,7 +99,8 @@
         android:background="@drawable/sender_message_layout_forum"
         android:layout_alignParentTop="true"
         android:layout_marginTop="3dp"
-        android:layout_marginHorizontal="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="40dp"
         android:paddingStart="10dp"
         android:paddingTop="5dp"
         android:paddingEnd="20dp"
